# prop_parser

./: .clang-format  .gitignore  CMakeLists.txt  PropertyParser.cpp  PropertyParser.h  PropertyParserTests.cpp  README.md
src/: PropertyParser.cpp  PropertyParser.h
tests/: PropertyParserTests.cpp
